Prevent vertical shift on multiline username

--- a/src/components/User/CollabBadge.module.scss
+++ b/src/components/User/CollabBadge.module.scss
@@ -289,6 +289,7 @@
             position: relative;
             margin-right: -33px;
             width: auto;
+            line-height: 0.8em;
           }
         }
       }
